--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 tittle: V V V N Udayaditya
-logo: headshot_circle.png
+logo: headshot_circle.jpg
 #description: text below image
 #show_downloads: true
 theme: jekyll-theme-minimal
